🐛 fix: build.gradle 스프링 부트 및 의존성 수정
- 4.0.4 -> 3.5.11